--- a/experiments/training_config.yaml
+++ b/experiments/training_config.yaml
@@ -1,6 +1,8 @@
-n_classes: 80
-input_res: [300, 300, 3]
-batch_size: 16
+epochs: 100
+n_classes: 3
+background_class_id: 0
+input_res: [300, 300, 3] # Height, width, channels
+batch_size: 32
 l2_regularization: 0.0005
 min_scale: 0.1
 max_scale: 0.9
@@ -11,12 +13,13 @@ aspect_ratios_per_layer: [[1.0, 2.0, 0.5], [1.0, 2.0, 0.5, 3.0, 1.0 / 3.0], [1.0
 two_boxes_for_ar1: True
 steps: null
 offsets: null
-clip_boxes: False
+clip_boxes: True
 variances: [0.1, 0.1, 0.2, 0.2]
-coords: 'minmax'
+coords: 'corners'
+inference_coords: 'centroids'
 normalize_coords: True
-subtract_mean: [123, 117, 104]
-divide_by_stddev: 128
+subtract_mean: null
+divide_by_stddev: null
 swap_channels: null
 confidence_thresh: 0.01
 iou_threshold: 0.45
